--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,20 @@
 {
-  "singleQuote": true
+  "printWidth": 120,
+
+  "arrowParens": "always",
+  "quoteProps": "consistent",
+
+  "trailingComma": "all",
+  "semi": true,
+
+  "tabWidth": 2,
+  "useTabs": false,
+  "overrides": [
+    {
+      "files": "*.md",
+      "options": {
+        "printWidth": 60
+      }
+    }
+  ]
 }
