--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@emotion/css": "^11.1.3",
     "@nrwl/cli": "12.6.5",
     "@nrwl/cypress": "12.6.5",
     "@nrwl/eslint-plugin-nx": "12.6.5",
@@ -51,19 +54,24 @@
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
     "babel-jest": "27.0.6",
+    "classnames": "^2.3.1",
     "cypress": "^7.3.0",
     "dotenv": "~10.0.0",
-    "eslint": "7.22.0",
+    "eslint": "^7.32.0",
+    "eslint-config-alloy": "^4.2.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-unused-imports": "^1.1.2",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
+    "twind": "^0.16.16",
     "typescript": "~4.3.5"
   }
 }
