--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unused-imports": "^1.1.2",
+    "immer": "^9.0.5",
     "jest": "27.0.3",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.3",
